General adjustments for post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <header class="header container container--full" role="banner">
-	<button class="navigation-button" role="button">Menu</button>
-		<nav class="navigation" role="menu">
+	<button class="navigation-button" role="button" data-nav-button>Menu</button>
+		<nav class="navigation" role="menu" data-navigation>
 			<a class="navigation__link" href="/">Home</a>
 			<a class="navigation__link" href="/blog">Blog</a>
-			<button class="navigation__close" role="button">x</button>
+			<button class="navigation__close" role="button" data-nav-close>x</button>
 		</nav>
 	<div class="header__info">
 		<div>
