--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -10,6 +10,7 @@
 	&:hover,
 	&:focus
 		opacity: .8
+		color: #fff
 
 	&:active
 		transform: translateY(5px)
@@ -23,7 +24,6 @@
 	/*----------  Big size  ----------*/
 	&--big
 		padding: 10px 25px
-
 
 	/*----------  Twitter  ----------*/
 	&--twitter
@@ -40,6 +40,10 @@
 		background-color: #f5f7f9
 		box-shadow: 0 5px 0 0 darken(#f5f7f9, 10%)
 		color: #666
+
+		&:hover,
+		&:focus
+			color: #666
 
 	/*----------  CodePen  ----------*/
 	&--codepen
