--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -1,5 +1,6 @@
 $color-orange: #f39c12
 $color-blue: #4183d7
+$color-green: #2ecc71
 /*----------  Gradients  ----------*/
 $gradient-dark--color-1: #434343
 $gradient-dark--color-2: #000
@@ -13,6 +14,7 @@ $font-weight--light: 300
 
 $color-typography: #fff
 $color-links: $color-orange
+$color-links--inverse: $color-green
 
 /*----------  Themes  ----------*/
 
