General adjustments for post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header container container--full" role="banner">
+<header class="header container container--full u-flow" role="banner">
 	<button class="navigation-button" role="button" data-nav-button>Menu</button>
 		<nav class="navigation" role="menu" data-navigation>
 			<a class="navigation__link" href="/">Home</a>
