--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,9 +8,7 @@
   {% include head.html %}
 <body data-hold class="blog">
 
-	<div data-wrap-theme class="theme">
-		<div data-theme class="theme__item theme__item--light"></div>
-	</div>
+	{% include theme.html %}
 
   {% include header.html %}
 
@@ -20,10 +18,10 @@
 
   {% if page.links %}
   	{% if page.links.left %}
-  		<a href={{ page.links.left.link }} class="arrow arrow--left" data-text="{{ page.links.left.text }}"></a>
+  		<a href={{ page.links.left.link }} class="arrow arrow--left u-flow" data-text="{{ page.links.left.text }}"></a>
   	{% endif %}
   	{% if page.links.right %}
-  		<a href={{ page.links.right.link }} class="arrow arrow--right" data-text="{{ page.links.right.text }}"></a>
+  		<a href={{ page.links.right.link }} class="arrow arrow--right u-flow" data-text="{{ page.links.right.text }}"></a>
   	{% endif %}
   {% endif %}
 
