--- a/src/styles/shared/_hold-themes.sass
+++ b/src/styles/shared/_hold-themes.sass
@@ -21,6 +21,6 @@
 			background: #fff
 
 /*----------  Main  ----------*/
-body > *:not(.theme):not(.cover):not(.arrow):not(.header):not(.sr-only)
+body > *:not(.sr-only):not(.u-flow)
 	z-index: $z-index--main
 	position: relative
