--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -19,7 +19,9 @@ $color-links--inverse: $color-green
 /*----------  Themes  ----------*/
 
 /*----------  Z-index  ----------*/
-$z-index--navigation: 6
+$z-index--navigation: 8
+$z-index--header-post-title: 7
+$z-index--header-post: 6
 $z-index--header: 5
 $z-index--arrow: 4
 $z-index--main: 3
