--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -1,7 +1,37 @@
+/*----------  Header post  ----------*/
 .header-post
-	border: solid 1px #ff0
+	position: fixed
+	left: 0
+	top: 0
+	width: 100%
+	height: 100vh
+	background-repeat: no-repeat
+	background-position: center center
+	background-size: cover
+	display: flex
+	justify-content: center
+	align-items: center
+	z-index: $z-index--header-post
 
+	&:after
+		content: ''
+		left: 0
+		top: 0
+		width: 100%
+		height: 100%
+		position: absolute
+		background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 1) 90%)
+
+	&__title
+		text-shadow: 1px 1px 0 rgba(0, 0, 0, .5)
+		text-align: center
+		position: relative
+		z-index: $z-index--header-post-title
+
+
+/*----------  Post content  ----------*/
 .post-content
+	padding-top: 100vh
 	margin-bottom: 35px
 
 	p
