Adjustments in header post

--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -19,10 +19,11 @@ $color-links--inverse: $color-green
 /*----------  Themes  ----------*/
 
 /*----------  Z-index  ----------*/
-$z-index--navigation: 8
+$z-index--navigation: 9
+$z-index--container-post: 8
 $z-index--header-post-title: 7
-$z-index--header-post: 6
-$z-index--header: 5
+$z-index--header-post: 5
+$z-index--header: 6
 $z-index--arrow: 4
 $z-index--main: 3
 $z-index--cover: 2
