--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ type: post
   	<h1 class="header-post__title">{{ page.title }}</h1>
 	</div>
 
-	<div class="container">
+	<div class="container has-color u-flow">
 	  <article role="main" class="post-content">
 	    {{ content }}
 	  </article>
