--- a/src/styles/shared/_grid.sass
+++ b/src/styles/shared/_grid.sass
@@ -13,9 +13,6 @@
 		padding-left: 20px
 		padding-right: 20px
 
-	&.has-color
-		background-color: #111
-
 	&--full
 		max-width: 100%
 
@@ -30,3 +27,10 @@
 	flex-direction: column
 	align-items: center
 	justify-content: center
+
+/*----------  Full  ----------*/
+.full
+	width: 100%
+
+	&.has-color
+		background-color: #111
