--- a/src/styles/layout/_index.sass
+++ b/src/styles/layout/_index.sass
@@ -36,7 +36,7 @@ body
 		width: 100%
 		opacity: .1
 
-/*----------  Blog  ----------*/
+/*----------  Blog list  ----------*/
 .blog
 	padding-bottom: 35px
 
