--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -20,10 +20,11 @@
 		width: 100%
 		height: 100%
 		position: absolute
-		background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 20%, rgba(0, 0, 0, 1) 90%)
+		background: radial-gradient(ellipse at center, rgba(0, 0, 0, .25) 0%, rgba(0, 0, 0, 1) 80%)
+		transition: background .3s ease
 
-	&:after
-		content: ''
+	&__arrow
+		background: none
 		position: absolute
 		left: 50%
 		bottom: 25px
@@ -36,18 +37,22 @@
 		border-top: none
 		opacity: .3
 		animation: moveArrow 1s ease-out infinite alternate both
+		transition: border .3s ease
+		cursor: pointer
 
 	&__title
 		text-shadow: 1px 1px 0 rgba(0, 0, 0, .5)
 		text-align: center
 		position: relative
 		z-index: $z-index--header-post-title
+		transition: color .3s ease
 
-	+ .container
+	+ .full
 		position: relative
 		z-index: $z-index--container-post
 		margin-top: 100vh
-		padding-top: 35px
+		padding: 35px 0
+		transition: background .3s ease
 
 /*----------  Arrow animation  ----------*/
 @keyframes moveArrow
