General adjustments for post content and critical

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,11 @@
   {% endif %}
 
   {% include head.html %}
+
+	<style>
+		{% include css/critical.css %}
+	</style>
+
 <body class="has-cover is-center home" data-hold>
 
 	{% include theme.html %}
