--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ type: post
 	  	<article role="main" class="post-content">
 	    	{{ content }}
 	  	</article>
-  		<a href="/blog" class="button button--default button--big">See all posts...</a>
+  		<a href="/blog" class="button button--default button--big button--center">See all posts...</a>
   	</div>
   </div>
 
