--- a/src/styles/components/_post.sass
+++ b/src/styles/components/_post.sass
@@ -3,6 +3,7 @@
 	max-width: calc(33% - 10px)
 	position: relative
 	margin: 5px
+	min-height: 140px
 
 	@include media(900px)
 		max-width: calc(50% - 10px)
