--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -65,7 +65,8 @@
 
 /*----------  Post content  ----------*/
 .post-content
-	margin-bottom: 35px
+	max-width: 745px
+	margin: 0 auto 35px
 
 	p,
 	ul
