--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -21,6 +21,12 @@
 		background-color: #222
 		box-shadow: 0 5px 0 0 darken(#222, 10%)
 
+	&--center
+		max-width: 220px
+		margin: 0 auto
+		display: block
+		text-align: center
+
 	/*----------  Big size  ----------*/
 	&--big
 		padding: 10px 25px
