--- a/src/styles/layout/_themes.sass
+++ b/src/styles/layout/_themes.sass
@@ -49,7 +49,7 @@ body
 
 /*----------  Light theme  ----------*/
 .is-light
-	@include theme(#111, $color-blue, $color-green, rgba(255, 255, 255, .9), linear-gradient(transparent 50%, rgba(0, 0, 0, .8) 50%))
+	@include theme(rgba(0, 0, 0, .85), $color-blue, $color-green, rgba(255, 255, 255, .9), linear-gradient(transparent 50%, rgba(0, 0, 0, .8) 50%))
 
 	.post-content
 		@import '../layout/syntax-light'
@@ -61,7 +61,7 @@ body
 		&:before
 			background: radial-gradient(ellipse at center, rgba(255, 255, 255, .65) 0%, rgba(255, 255, 255, 1) 80%)
 
-		&:after
+		&__arrow
 			border-color: #222
 
 		&__title
