general adjustments for perfomance

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,7 +60,7 @@
 			<link rel="stylesheet" href="/dist/styles/main.min.css">
 		{% endif %}
 
-		<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet">
+		<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet"> -->
 
 		<script type="text/javascript">
 		(function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
