--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
   	{% endif %}
   {% endif %}
 
+	<script src="dist/scripts/libs/fontface-observer.js"></script>
   <script src="dist/scripts/home.min.js"></script>
 </body>
 </html>
