General adjustments for cover

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -25,6 +25,6 @@
   	{% endif %}
   {% endif %}
 
-  <script src="/dist/scripts/home.min.js"></script>
+  {% include scripts.html %}
 </body>
 </html>
