--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,6 +33,6 @@ type: post
 
   <a rel="author" class="sr-only" href="https://plus.google.com/u/0/+RaphaelFabeni">Raphael Fabeni</a>
 
-  <script src="/dist/scripts/home.min.js"></script>
+  {% include scripts.html %}
 </body>
 </html>
