--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -6,7 +6,7 @@
 @import 'components/arrow-link'
 @import 'components/actions-buttons'
 @import 'components/buttons'
-@import 'components/post'
+@import 'components/post-box'
 
 @import 'shared/grid'
 @import 'shared/hold-themes'
@@ -16,4 +16,4 @@
 @import 'layout/index'
 @import 'layout/post'
 @import 'layout/themes'
-@import 'layout/monokai'
+@import 'layout/syntax/monokai'
