--- a/src/styles/layout/_themes.sass
+++ b/src/styles/layout/_themes.sass
@@ -58,8 +58,9 @@ body
 			background-color: rgba(245, 245, 245, 1)
 
 	.header-post
+		opacity: .75
 		&:before
-			background-color: rgba(255, 255, 255, .2)
+			opacity: 0
 
 		&__arrow
 			border-color: #222
