--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,7 +29,7 @@ type: post
   	</div>
   </div>
 
-  <a href="/blog" class="arrow arrow--left u-flow" data-text="Blog"></a>
+  <a href="/blog" class="arrow arrow--left u-flow is-hidden" data-text="Blog" data-back-link></a>
 
   <a rel="author" class="sr-only" href="https://plus.google.com/u/0/+RaphaelFabeni">Raphael Fabeni</a>
 
