--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,12 +15,15 @@ type: post
 	{% include theme.html %}
 
   {% include header.html %}
-  <div class="header-post u-flow" style="background-image: url('{{ page.image }}'"">
+
+  <div class="header-post u-flow">
+  	<img class="header-post__image" src="{{ page.image }}" alt="{{ page.alt }}">
   	<h1 class="header-post__title">{{ page.title }}</h1>
   	<button class="header-post__arrow" data-post-arrow></button>
 	</div>
 
 	<div class="full has-color u-flow">
+
 		<div class="container ">
 	  	<article role="main" class="post-content">
 	    	{{ content }}
