Responsive adjustments for header post

--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -21,6 +21,7 @@
 		width: 100vw
 		height: 100vh
 		object-fit: cover
+		opacity: .5
 
 	&__arrow
 		background: none
@@ -65,7 +66,7 @@
 			display: none
 
 		+ .full
-			margin-top: 50px
+			margin-top: 10px
 
 /*----------  Arrow animation  ----------*/
 @keyframes moveArrow
