--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 
 	<div class='actions'>
 		<!-- <div class="actions__button" role="button" data-button data-button-colors>&#10036;</div> -->
-		<div class="actions__button" role="button" data-button data-button-dark>&#9790;</div>
-		<div class="actions__button" role="button" data-button data-button-light>&#x263C;</div>
+		<div class="actions__button" role="button" data-button data-button-dark>I</div>
+		<div class="actions__button" role="button" data-button data-button-light>II</div>
   </div>
 </header>
