General adjustments and add the post about 2017

--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -18,7 +18,7 @@
       <a href="/blog" itemprop="url">
       {% endif %}
       {% if page.lang == "en" %}
-      <a href="/en/blog" itemprop="url">
+      <a href="/blog" itemprop="url">
       {% endif %}
          <span itemprop="title">Blog</span>
       </a> ›
