--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -96,6 +96,10 @@
 		list-style-type: disc
 		list-style-position: inside
 
+	figure
+		margin-bottom: 20px
+		iframe
+			width: 100%
 
 	/*----------  Highlight  ----------*/
 	.highlight
