--- a/src/styles/layout/_themes.sass
+++ b/src/styles/layout/_themes.sass
@@ -49,7 +49,7 @@ body
 	@include theme(rgba(0, 0, 0, .85), $color-blue, $color-green, rgba(255, 255, 255, .9), linear-gradient(transparent 50%, rgba(0, 0, 0, .8) 50%))
 
 	.post-content
-		@import '../layout/syntax/syntax-light'
+		@import '../layout/syntax/light'
 
 		> * > code
 			background-color: rgba(245, 245, 245, 1)
