--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -16,4 +16,4 @@
 @import 'layout/index'
 @import 'layout/post'
 @import 'layout/themes'
-@import 'layout/syntax/monokai'
+@import 'layout/syntax/dark'
