--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,6 @@
 <script src="/dist/scripts/libs/fontface-observer.js"></script>
 <script src="/dist/scripts/home.min.js"></script>
+
+{% if page.type == 'Post' %}
+<script src="/dist/scripts/libs/prism.js"></script>
+{% endif %}
