--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -101,23 +101,14 @@
 		iframe
 			width: 100%
 
-	/*----------  Highlight  ----------*/
-	.highlight
-		margin-bottom: 20px
-		padding: 10px 20px
-		box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5) inset
+	/*----------  code  ----------*/
+	pre
 		font-size: 16px
-		line-height: 1.4
-
-		pre
-			color: #eee
-			text-indent: -6px
-			white-space: pre-wrap
-			word-wrap: break-word
-
-		code
-			background-color: transparent
-			color: inherit
+		font-weight: normal
+		text-indent: -6px
+		white-space: pre-wrap
+		word-wrap: break-word
+		margin: 5px 0 25px
 
 	code
 		background-color: rgba(0, 0, 0, 0.3)
