--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -84,13 +84,15 @@
 
 	p,
 	ul
-		margin-bottom: 20px
+		margin-bottom: 25px
 		line-height: 1.6
 
 	h2,
 	h3,
 	h4
-		margin-bottom: 10px
+		margin-bottom: 15px
+		margin-top: 15px
+		line-height: 1.4
 
 	ul li
 		list-style-type: disc
