--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header container container--full u-flow" role="banner">
+<header class="header container container--full" role="banner">
 	<button class="navigation-button" role="button" data-nav-button>Menu</button>
 		<nav class="navigation" role="menu" data-navigation>
 			<a class="navigation__link" href="/">Home</a>
@@ -11,9 +11,4 @@
 			<h2 class="header__subtitle">Front-end developer</h2>
 		</div>
 	</div>
-
-	<div class='actions'>
-		<div class="actions__button" role="button" data-button data-button-dark>I</div>
-		<div class="actions__button" role="button" data-button data-button-light>II</div>
-  </div>
 </header>
