--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,7 @@
 
 <body class="has-cover is-center home" data-hold>
 
-	{% include theme.html %}
-
-	<div data-cover class="cover u-flow"></div>
+	<div data-cover class="cover"></div>
 
   {% include header.html %}
 
@@ -25,10 +23,10 @@
 
   {% if page.links %}
   	{% if page.links.left %}
-  		<a href={{ page.links.left.link }} class="arrow arrow--left u-flow" data-text="{{ page.links.left.text }}"></a>
+  		<a href={{ page.links.left.link }} class="arrow arrow--left" data-text="{{ page.links.left.text }}"></a>
   	{% endif %}
   	{% if page.links.right %}
-  		<a href={{ page.links.right.link }} class="arrow arrow--right u-flow" data-text="{{ page.links.right.text }}"></a>
+  		<a href={{ page.links.right.link }} class="arrow arrow--right" data-text="{{ page.links.right.text }}"></a>
   	{% endif %}
   {% endif %}
 
