--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -6,7 +6,7 @@
   {% endif %}
 
   {% include head.html %}
-<body data-hold class="blog">
+<body data-hold class="simple">
 
   {% include header.html %}
 
