--- a/src/styles/components/_arrow-link.sass
+++ b/src/styles/components/_arrow-link.sass
@@ -8,7 +8,7 @@
 	text-decoration: none
 	padding-top: 10px
 	z-index: $z-index--arrow
-	color: #fff
+	color: $color-green
 	display: inline-block
 
 	@include media($grid--break-arrows)
