--- a/src/styles/components/_buttons.sass
+++ b/src/styles/components/_buttons.sass
@@ -18,8 +18,8 @@
 		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0)
 
 	&--default
-		background-color: #222
-		box-shadow: 0 5px 0 0 darken(#222, 10%)
+		background: linear-gradient(to right, $color-button, darken($color-button, 20%))
+		box-shadow: 0 5px 0 0 darken($color-button, 30%)
 
 	&--center
 		max-width: 220px
