--- a/src/styles/config/_variables.sass
+++ b/src/styles/config/_variables.sass
@@ -1,33 +1,31 @@
 $color-orange: #f39c12
 $color-blue: #4183d7
 $color-green: #2ecc71
-/*----------  Gradients  ----------*/
-$gradient-dark--color-1: #434343
-$gradient-dark--color-2: #000
-
-$gradient-blue--color-1: #136a8a
-$gradient-blue--color-2: #267871
 
 /*----------  Fonts  ----------*/
 $font-family--default: 'Raleway', Helvetica, Arial, sans-serif
 $font-weight--light: 300
 
-$color-typography: #fff
-$color-links: $color-orange
-$color-links--inverse: $color-green
+/*----------  Theme  ----------*/
+$color-menu: $color-green
+$color-title: $color-green
+$color-button: $color-green
 
-/*----------  Themes  ----------*/
+$color-typography: rgba(0, 0, 0, .84)
+$color-links: $color-green
+$color-links--inverse: $color-blue
 
 /*----------  Z-index  ----------*/
 $z-index--navigation: 9
 $z-index--container-post: 6
-$z-index--header-post-title: 5
 $z-index--header-post: 4
 $z-index--header: 8
 $z-index--arrow: 7
-$z-index--main: 3
 $z-index--cover: 2
-$z-index--gradient: 1
+
+/*----------  Grid  ----------*/
+$grid: 1200px
+$grid--small: 745px
 
 $grid--break-arrows: 768px
 $grid--break-actions: 600px
