--- a/src/styles/shared/_navigation.sass
+++ b/src/styles/shared/_navigation.sass
@@ -1,18 +1,19 @@
 .navigation-button
 	text-indent: -9999px
-	border: none
 	height: 28px
 	width: 30px
 	margin-right: 10px
 	background-color: transparent
-	background-image: linear-gradient(transparent 50%, rgba(255, 255, 255, 1) 50%)
+	background-image: linear-gradient(#fff 50%, $color-menu 50%)
 	background-size: 100% 8px
 	position: fixed
 	left: 10px
-	top: 20px
-	opacity: .5
+	top: 21px
+	opacity: .75
 	transition: opacity .3s ease
 	cursor: pointer
+	border: none
+	box-shadow: 0 0 0 5px #fff
 
 	&:hover,
 	&:focus
