--- a/src/styles/components/_post-box.sass
+++ b/src/styles/components/_post-box.sass
@@ -2,8 +2,13 @@
 	width: 100%
 	max-width: 32.3%
 	position: relative
-	margin: .5%
-	min-height: 140px
+	margin: 25px .5%
+	// min-height: 140px
+	display: flex
+	flex-direction: column
+
+	&[hidden]
+		display: none
 
 	@include media(900px)
 		max-width: calc(50% - 10px)
@@ -11,28 +16,42 @@
 	@include media(768px)
 		max-width: 100%
 
+	&__thumb
+		overflow: hidden
+		position: relative
+
+		&:before
+			display: block
+			content: ''
+			width: 100%
+			padding-top: (21 / 40) * 100%
+
+		> img
+			position: absolute
+			width: 100%
+			left: 0
+			top: 0
+			height: 100%
+
 	&__title
 		font-size: 24px
+		flex: 1
+		display: flex
+		text-align: center
+		justify-content: center
+		align-items: center
 
 	&__link
-		background-color: rgba(0, 0, 0, .65)
-		position: absolute
-		left: 0
-		top: 0
-		width: 100%
-		height: 100%
-		color: #fff
-		text-decoration: none
 		display: flex
 		align-items: center
 		justify-content: center
-		text-align: center
-		padding: 10px
-		will-change: background-color, color
-		transition: background-color .3s ease, color .3s ease
+		width: 100%
+		height: 100%
+		text-decoration: none
+		padding: 20px 10px
+		box-shadow: 0 3px 15px 0 rgba(0, 0, 0, .1)
 
 		&:hover,
 		&:focus
-			background-color: rgba(0, 0, 0, .85)
-			color: $color-orange
+			color: $color-green
 			opacity: 1
