--- a/src/styles/layout/_index.sass
+++ b/src/styles/layout/_index.sass
@@ -1,6 +1,6 @@
 body
 	min-height: 100vh
-	background: linear-gradient(-45deg, $gradient-dark--color-1 0%, $gradient-dark--color-2 100%)
+	background-color: #fff
 
 	&.has-cover
 		padding-left: 500px
@@ -22,12 +22,6 @@ body
 	background-size: cover
 	box-shadow: 0 0 0 10px rgba(255, 255, 255, .35)
 	z-index: $z-index--cover
-	filter: grayscale(100%)
-	transition: filter .3s ease
-	will-change: filter
-
-	&.has-color
-		filter: grayscale(0)
 
 	@include media(990px)
 		width: 300px
