--- a/src/styles/layout/_post.sass
+++ b/src/styles/layout/_post.sass
@@ -1,27 +1,12 @@
 /*----------  Header post  ----------*/
 .header-post
-	position: fixed
-	left: 0
-	top: 0
 	width: 100%
-	height: 100vh
-	background-repeat: no-repeat
-	background-position: center center
-	background-size: cover
-	display: flex
-	justify-content: center
-	align-items: center
-	z-index: $z-index--header-post
-	transition: opacity .3s ease
+	max-width: $grid
+	margin: 0 auto
+	position: relative
 
 	&__image
-		position: fixed
-		left: 0
-		top: 0
-		width: 100vw
-		height: 100vh
-		object-fit: cover
-		opacity: .5
+		width: 100%
 
 	&__arrow
 		background: none
@@ -40,33 +25,34 @@
 		transition: border .3s ease
 		cursor: pointer
 
-	&__title
-		text-shadow: 1px 1px 0 rgba(0, 0, 0, .5)
-		text-align: center
-		position: relative
-		z-index: $z-index--header-post-title
-		transition: color .3s ease, background .3s ease
-		padding: 10px
-		margin: 0 auto
-		max-width: 80%
-
 	+ .full
 		position: relative
 		z-index: $z-index--container-post
-		margin-top: 100vh
-		padding: 35px 0
-		transition: background .3s ease
+		padding: 5px 0 35px 0
 
 	@include media(800px)
 		position: relative
 		height: auto
 
-		&__image,
 		&__arrow
 			display: none
 
 		+ .full
 			margin-top: 10px
+
+/*----------  Post title  ----------*/
+.post-title
+	margin-bottom: 25px
+	padding-top: 25px
+	padding-bottom: 25px
+	border-bottom: solid 1px #eee
+	font-size: 40px
+
+	&.no-top-spacing
+		padding-top: 0
+
+	@include media(800px)
+		font-size: 30px
 
 /*----------  Arrow animation  ----------*/
 @keyframes moveArrow
@@ -79,8 +65,7 @@
 
 /*----------  Post content  ----------*/
 .post-content
-	max-width: 745px
-	margin: 0 auto 35px
+	margin-bottom: 35px
 
 	p,
 	ul
@@ -111,8 +96,11 @@
 		white-space: pre-wrap
 		word-wrap: break-word
 		margin: 5px 0 25px
+		background-color: #f5f5f5
+		padding: 10px
+		border: solid 1px #ddd
 
 	code
-		background-color: rgba(0, 0, 0, 0.3)
 		color: #f92672
 		padding: 2px 5px
+		background-color: #f5f5f5
