--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -4,16 +4,14 @@
 
 @import 'components/typography'
 @import 'components/arrow-link'
-@import 'components/actions-buttons'
 @import 'components/buttons'
 @import 'components/post-box'
 @import 'components/category-header'
 
 @import 'shared/grid'
-@import 'shared/hold-themes'
 @import 'shared/header'
 @import 'shared/navigation'
 
 @import 'layout/index'
+@import 'layout/closet'
 @import 'layout/post'
-@import 'layout/themes'
