--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,8 @@
 		<nav class="navigation" role="menu" data-navigation>
 			<a class="navigation__link" href="/">Home</a>
 			<a class="navigation__link" href="/blog">Blog</a>
+			<a class="navigation__link" href="/my-closet">Closet</a>
+			<a class="navigation__link" href="/thoughts">Thoughts</a>
 			<button class="navigation__close" role="button" data-nav-close>x</button>
 		</nav>
 	<div class="header__info">
