--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,7 @@
-<script src="/dist/scripts/libs/fontface-observer.js"></script>
+<!-- <script src="/dist/scripts/libs/fontface-observer.js"></script> -->
 <script src="/dist/scripts/home.min.js"></script>
 
 {% if page.type == 'Post' %}
-<script src="/dist/scripts/libs/prism.js"></script>
+<!-- <script src="/dist/scripts/libs/prism.js"></script> -->
+<script src="/dist/scripts/post.min.js"></script>
 {% endif %}
