--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -14,14 +14,14 @@
     {{ content }}
   </main>
 
-  {% if page.links %}
+  <!-- {% if page.links %}
   	{% if page.links.left %}
   		<a href={{ page.links.left.link }} class="arrow arrow--left" data-text="{{ page.links.left.text }}"></a>
   	{% endif %}
   	{% if page.links.right %}
   		<a href={{ page.links.right.link }} class="arrow arrow--right" data-text="{{ page.links.right.text }}"></a>
   	{% endif %}
-  {% endif %}
+  {% endif %} -->
 
   {% include scripts.html %}
 </body>
