--- a/_layouts/simple.html
+++ b/_layouts/simple.html
@@ -10,18 +10,18 @@
 
   {% include header.html %}
 
-  <main role="main" id="content" class="container container--full container--flex">
+  <main role="main" id="content" class="container container--full">
     {{ content }}
   </main>
 
-  {% if page.links %}
+  <!-- {% if page.links %}
   	{% if page.links.left %}
   		<a href={{ page.links.left.link }} class="arrow arrow--left" data-text="{{ page.links.left.text }}"></a>
   	{% endif %}
   	{% if page.links.right %}
   		<a href={{ page.links.right.link }} class="arrow arrow--right" data-text="{{ page.links.right.text }}"></a>
   	{% endif %}
-  {% endif %}
+  {% endif %} -->
 
   {% include scripts.html %}
 </body>
